org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/Test_issue_1529_1.java
package invalid;

class A{
    void bar() {}
}

class B extends A {
    void foo() {
        super.bar();
    }

    static void err(B b) {
        b./*]*/foo()/*[*/;
    }
}

